# curlyos-tui

./: .gitignore  Cargo.toml  README.md
docs/: graph.tape  mind.tape  recall.tape  shots.tape  systems.tape
src/: api.rs  app.rs  main.rs  ui.rs  worker.rs
