[package]
name = "curlyos-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal dashboard for curlyos-core (memories, episodes, identity, cognition, graph)"

[[bin]]
name = "curlyos"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
opt-level = 2
strip = true
